<resources>

    <string name="app_name">ZigGPS</string>
    <string name="online_fragment_label">Online</string>

    <string name="none">None</string>

<!--Login Screen-->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_user_name">User name</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_name_email_id">User name / Email ID</string>
    <string name="sign_in_mobile_number">Enter your mobile number</string>
    <string name="sign_in_create_new_account">Don\'t have an account?</string>
    <string name="sign_in_sign_up"> Sign Up</string>
    <string name="sign_in_login">Login</string>
    <string name="sign_in_powered_by">Powered by Zed Digital</string>
    <string name="sign_in_logo">LouMoves logo</string>
    <string name="login">Login</string>
    <string name="login_mobile_number">Login with Mobile number</string>
    <string name="sign_in_or">or</string>
    <string name="logout">logout</string>
    <string name="sign_in_otp">Please enter Mobile number and OTP sent to</string>
    <string name="privacy_policy_privacy">By signing up or logging in, you agree to our  <a href="https://izig.app/Zig-Gps-Privacy-policy.html"><font color='blue'>Terms and Conditions</font></a> ,<a href="https://izig.app/Zig-Gps-Privacy-policy.html"><font color='blue'>Privacy Policy</font></a> and <a href="https://izig.app/Zig-Gps-Privacy-policy.html"><font color='blue'>Master Service Agreement</font></a>



    </string>

    <string name="Dashboard">Dashboard</string>
    <string name="Tracking">Tracking</string>
    <string name="Fastags">Fastags</string>
    <string name="Reports">Reports</string>
    <string name="Documents">Documents</string>
    <string name="Maintance">Maintance</string>
    <string name="Alerts">Alerts</string>
    <string name="Device">Device</string>
    <string name="SnackBar">Enter Username</string>
    <string name="SnackBarPass">Enter Username</string>

    <string name="SnackBarBtn">Ok</string>

</resources>