<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
<!--
        <ImageView
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-100dp"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            android:rotation="180"
            android:src="@drawable/splash"
            />
-->

        <ImageView
            android:alpha=".1"
            android:id="@+id/test1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-30dp"
            android:contentDescription="@string/none"
            android:src="@drawable/bg_new" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/sign_in_otp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_60" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:id="@+id/user_name_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_in_mobile_number"
                app:startIconDrawable="@drawable/ic_baseline_mobile_friendly_24"
                app:startIconTint="@color/md_theme_dark_onPrimary"
                app:endIconMode="clear_text"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                app:errorTextAppearance="@style/ErrorAppearance"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:longClickable="false"
                    android:importantForAutofill="no"
                    android:maxLength="100"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />
                <!--                        android:digits= "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_-!@#$%^*()"
-->
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_large"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="VERIFY"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical">

&lt;!&ndash;
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_marginTop="47dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:backgroundTint="@color/white"
            android:id="@+id/fabClose"
            app:tint="@color/white"
            android:backgroundTint="@color/black"
            app:elevation="10dp"
            app:contentDescription="Back"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            android:contentDescription="Back" />
&ndash;&gt;
    </LinearLayout>-->
</androidx.coordinatorlayout.widget.CoordinatorLayout>